VSE - Metastrip's Blend mode ignored with Effect strip bellow #87678

Closed
opened 2021-04-21 12:18:48 +02:00 by filip mond · 13 comments

System Information
Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 580X OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.10.19

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-04-09 21:26, hash: 0515ff70ec
Worked: (newest version of Blender that worked as expected)

Short description of error
Metastrip's Blend mode ignored with Effect strip bellow, but it is working with a Strip.

Exact steps for others to reproduce the error
I even didn't know it is possible to move Effect strip bellow a Strip related to. This technique was described as only one way to create an outline to a Text strip.

  • add Text Strip
  • add Glow effect strip to it
  • move Glow strip bellow Text strip

by a simple tweaking + one Color Balance modifier you can contrast and recolour the Glow strip into an illusion of outline around a text.
Detailed here

It perfectly works for single strip with blend mode Alpha Over as expected, but since Text strip is inside Metastrip blend mode is ignored or better say - Text strip is not visible even all setup is for both strips the same.

Text Strip
Screenshot 2021-04-21 at 12.00.32.png

Metastrip
Screenshot 2021-04-21 at 12.00.50.png

test_Text_Glow_Metastrip.blend

**System Information** Operating system: macOS-10.15.7-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 580X OpenGL Engine ATI Technologies Inc. 4.1 ATI-3.10.19 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-04-09 21:26, hash: `0515ff70ec` Worked: (newest version of Blender that worked as expected) **Short description of error** Metastrip's Blend mode ignored with Effect strip bellow, but it is working with a Strip. **Exact steps for others to reproduce the error** I even didn't know it is possible to move Effect strip bellow a Strip related to. This technique was described as only one way to create an outline to a Text strip. - add Text Strip - add Glow effect strip to it - move Glow strip bellow Text strip by a simple tweaking + one Color Balance modifier you can contrast and recolour the Glow strip into an illusion of outline around a text. [Detailed here ](https://blender.stackexchange.com/a/214224/2214) It perfectly works for single strip with blend mode Alpha Over as expected, but since Text strip is inside Metastrip blend mode is ignored or better say - Text strip is not visible even all setup is for both strips the same. Text Strip ![Screenshot 2021-04-21 at 12.00.32.png](https://archive.blender.org/developer/F10031158/Screenshot_2021-04-21_at_12.00.32.png) Metastrip ![Screenshot 2021-04-21 at 12.00.50.png](https://archive.blender.org/developer/F10031161/Screenshot_2021-04-21_at_12.00.50.png) [test_Text_Glow_Metastrip.blend](https://archive.blender.org/developer/F10031163/test_Text_Glow_Metastrip.blend)
Author

Added subscriber: @FilipMond

Added subscriber: @FilipMond

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Added subscriber: @iss

Added subscriber: @iss

There is piece of code that was supposed to not render base strip when it has effects. this was written quite poorly though.

For example when you use for example transform effect on some strip, you don't expect to see original image. At this point I would consider that to be established convention, so I don't think I would like to change that. However I think it could be said, that when effect of source strip is below source strip, user would expect effect to be blended with source. I can change behavior for 3.0 release, because this change would affect existing files.

For 2.93 I could make bugfix that would not render text strip as well.

As workaround you can use speed control strip above meta strip, which will take no time to do additional processing.

There is piece of code that was supposed to not render base strip when it has effects. this was written quite poorly though. For example when you use for example transform effect on some strip, you don't expect to see original image. At this point I would consider that to be established convention, so I don't think I would like to change that. However I think it could be said, that when effect of source strip is below source strip, user would expect effect to be blended with source. I can change behavior for 3.0 release, because this change would affect existing files. For 2.93 I could make bugfix that would not render text strip as well. As workaround you can use speed control strip above meta strip, which will take no time to do additional processing.

Looked at fix for 2.93 and there is no clean way to fix this case that would work reliably, so I think I will pass on that and focus on fix for 3.0

Looked at fix for 2.93 and there is no clean way to fix this case that would work reliably, so I think I will pass on that and focus on fix for 3.0

Added subscriber: @Sergey

Added subscriber: @Sergey

@iss, Correct me if I'm wrong, it does seem like this is not a recent regression. If so, addressing it for the 3.0 sounds good to me.

Just making sure we don't introduce known regressions in the LTS release (known old limitations are fine though :)

@iss, Correct me if I'm wrong, it does seem like this is not a recent regression. If so, addressing it for the 3.0 sounds good to me. Just making sure we don't introduce known regressions in the LTS release (known old limitations are fine though :)

In #87678#1155328, @Sergey wrote:
@iss, Correct me if I'm wrong, it does seem like this is not a recent regression. If so, addressing it for the 3.0 sounds good to me.

Just making sure we don't introduce known regressions in the LTS release (known old limitations are fine though :)

This isn't recent regression and I don't intend fixing this for 2.93

> In #87678#1155328, @Sergey wrote: > @iss, Correct me if I'm wrong, it does seem like this is not a recent regression. If so, addressing it for the 3.0 sounds good to me. > > Just making sure we don't introduce known regressions in the LTS release (known old limitations are fine though :) This isn't recent regression and I don't intend fixing this for 2.93

This issue was referenced by 0b7744f4da

This issue was referenced by 0b7744f4da666bccf2005ad0d0e77c5ddc73bfd5

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2021-05-19 23:16:41 +02:00

Issue should be resolved by 0b7744f4da

Now any strip that is placed above it's effect will be rendered (unless they are muted and similar cases).
There is chance that this change won't be received well, and I will have to revert this decision, because there are hundreds of files that may be possibly broken by this change. Hopefully this won't happen though.

Issue should be resolved by 0b7744f4da Now any strip that is placed above it's effect will be rendered (unless they are muted and similar cases). There is chance that this change won't be received well, and I will have to revert this decision, because there are hundreds of files that may be possibly broken by this change. Hopefully this won't happen though.
Author

Solved :) Great ... Thank you

Solved :) Great ... Thank you
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87678
No description provided.